# swift

./: CMakeLists.txt
cmake/modules/: AddSwiftSyntaxTableGen.cmake  SwiftSyntaxLibrary.cmake
include/swift/AST/: Decl.h
include/swift/Syntax/: AttributeSyntax.td  CMakeLists.txt  CommonSyntax.td  ExprSyntax.td  PatternSyntax.td  RawSyntax.h  StmtSyntax.td  Syntax.h  Syntax.td  SyntaxData.h  SyntaxKinds.def  TokenSyntax.h  TokenSyntax.td  TypeSyntax.td
lib/AST/: Decl.cpp  DocComment.cpp  Module.cpp
lib/ClangImporter/: ImportDecl.cpp
lib/IRGen/: IRGenDebugInfo.cpp
lib/Parse/: ParseDecl.cpp
lib/Sema/: TypeCheckProtocol.cpp
lib/Serialization/: Deserialization.cpp
lib/Syntax/: CMakeLists.txt  README.md  RawSyntax.cpp  Syntax.cpp  SyntaxData.cpp  TokenSyntax.cpp
lib/Syntax/.doc/: SyntaxExample.graffle
lib/Syntax/TableGen/: swift-syntax-tblgen.cpp
tools/: CMakeLists.txt
tools/SourceKit/tools/sourcekitd-test/: Options.td  TestOptions.cpp  TestOptions.h  sourcekitd-test.cpp
tools/swift-update/: CMakeLists.txt  swift-update.cpp
